added ads window graph

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -32,8 +32,9 @@
 } 
 
 @misc{storm,
-	title = "Storm: http://storm.apache.org/documentation/Home.html",
-	url = "http://storm.apache.org/documentation/Home.html",
+	author = {Apache Storm},
+	title = {http://storm.apache.org/documentation/Home.html},
+	url = {http://storm.apache.org/documentation/Home.html},
 }
 
 @article{cql,
