--- a/paper/SimpleCQL.tex
+++ b/paper/SimpleCQL.tex
@@ -9,6 +9,8 @@
 \usepackage{amsmath} % assumes amsmath package installed
 %\usepackage{amssymb}  % assumes amsmath package installed
 
+\usepackage[font=small,labelfont=bf]{caption}
+
 \newcommand{\unit}[1]{\ensuremath{\, \mathrm{#1}}}
 
 \title{\LARGE \bf
