Added figure captions

--- a/paper/SimpleCQL.tex
+++ b/paper/SimpleCQL.tex
@@ -149,7 +149,7 @@ Using these different operators, we see that a query that takes a stream as inpu
 \begin{figure}[tpH]
     \centering
     \centerline{\includegraphics[totalheight=2.5cm]{operators.png}}
-    \caption{TODO: Caption.}
+    \caption{Figure showing how a query that takes a stream as input and emits a stream as output is executed under the hood.}
     \label{fig:operators}
 \end{figure}
 
@@ -357,7 +357,7 @@ As expected Garbage collection drastically reduced the memory footprint of the s
 \begin{figure}[tpH!]
     \centering
     \centerline{\includegraphics[totalheight=5cm]{gc_perf.png}}
-    \caption{TODO.}
+    \caption{Plot of execution time per timestamp versus timestamp with and without garbage collection. With Garbage Collection enabled, the system performs marginally worse than with Garbage Collection disabled}
     \label{fig:gc_perf}
 \end{figure}
 
