adding my pretty third name

--- a/paper/SimpleCQL.tex
+++ b/paper/SimpleCQL.tex
@@ -31,7 +31,7 @@
 SimpleCQL: A Continuous Query Language for SimpleDB
 }
 
-\author{Deepak Narayanan, Tuan Nguyen, Jeffrey Warren}
+\author{Deepak Narayanan, Tuan Andrew Nguyen, Jeffrey Warren}
 
 \begin{document}
 
