--- a/paper/references.bib
+++ b/paper/references.bib
@@ -19,7 +19,7 @@
 @inproceedings{spark_streaming,
 	author = {Zaharia, Matei and Das, Tathagata and Li, Haoyuan and Shenker, Scott and Stoica, Ion},
 	title = {Discretized Streams: An Efficient and Fault-tolerant Model for Stream Processing on Large Clusters},
-	booktitle = {Proceedings of the 4th USENIX Conference on Hot Topics in Cloud Ccomputing},
+	booktitle = {Proceedings of the 4th USENIX Conference on Hot Topics in Cloud Computing},
 	series = {HotCloud'12},
 	year = {2012},
 	location = {Boston, MA},
