more modifications to Evaluation

--- a/paper/SimpleCQL.tex
+++ b/paper/SimpleCQL.tex
@@ -249,9 +249,7 @@ For now, we have only implemented the time based garbage collection policy. Effe
 Benchmarks of SimpleCQL were performed on an AWS Compute Optimized (c3.8xlarge) instance with 60 GiB of memory, 32 vCPUs, 640 GB of SSD-based local instance storage, and a 64-bit platform.  When applicable, SimpleCQL performance was compared to that of SimpleDB and the continuous workload of SimpleCQL is shown to outperform equivalent discretized workloads of SimpleDB.  
 
 \subsection{Testing Conditions}
-SimpleDB was intended to be a toy database designed for teaching core concepts of database internals.  As such, the performance of both SimpleDB and SimpleCQL suffer from a lack of optimizations.  However, a pairwise comparison uses the same underlying operations and care was taken to keep comparison even. For example, we configured SimpleDB to not write tuples to disk because SimpleCQL operates entirely in-memory, and SimpleDB does not use a B+Tree index because there is no indexing in SimpleCQL; thus, our measurements will closely isolate the gains or losses produced from SimpleCQL's iterative processing.
-
-SimpleDB's code is largely unoptimized, so the SimpleCQL performance metrics we present in this paper can be greatly improved upon using standard optimization techniques prevalent in the literature. 
+SimpleDB was intended to be a toy database designed for teaching core concepts of database internals.  As such, the performance of both SimpleDB and SimpleCQL suffer from a lack of optimizations.  However, we made sure to use the same underlying operations when benchmarking both SimpleDB and SimpleCQL, as well has holding as many other factors constant to make for a fair comparison. For example, we configured SimpleDB to not have to write inserted tuples to disk because SimpleCQL operates entirely in-memory. Further, SimpleDB does not use an index because there is no indexing in SimpleCQL at all. With these precautions, we anticipate our experiments will closely isolate the performance differences between SimpleDB and SimpleCQL.
 
 Many of the benchmark tests were run over $D = 1800$ timesteps and the number of tuples per timestep $R$ was increased to measure performance.  Equation~\ref{eq:throughput} is used to estimate the projected throughput of the system.
 
