--- a/paper/SimpleCQL.tex
+++ b/paper/SimpleCQL.tex
@@ -105,7 +105,7 @@ It should be noted that there can often be a delay of up to several minutes betw
 \section{Abstract Semantics}
 Prior work defines a comprehensive abstract semantic foundation for continuous query execution \cite{cql}.  The abstract semantics is based on two data types and three classes of operators.  SimpleCQL is built on these constructs.
 
-\subsection*{Data Types}
+\subsection{Data Types}
 In order to support continuous queries we have defined and implemented a set of streaming primitives: streams and relations. It should be noted that both streams and relations have traditional fixed, but not necessarily equal, schemas.
 
 We now present formal definitions of a stream and a relation.
@@ -237,7 +237,7 @@ We implement these diffs-based computations by maintaining the $prevRelation$, h
 
 
 \subsection{Garbage Collection}
-We implemented garbage collection in our system to ensure that streams aren’t stored in their entirety at any point in time -- this is desirable since streams can become arbitrarily large, especially if tuples are accumulated for a long time.
+We implemented garbage collection in our system to ensure that streams are not stored in their entirety at any point in time -- this is desirable since streams can become arbitrarily large, especially if tuples are accumulated for a long time.
 
 Two possible garbage collection policies are possible -- a time based garbage collection policy, where tuples from too far out in the past are discarded (this is suitable for queries featuring streams that are windowed using a time-based Stream-to-Relation converter) and a tuple based garbage collection policy, where tuples are discarded once the number of tuples in the system passes a certain threshold.
 
@@ -353,12 +353,14 @@ As seen in Figure~\ref{fig:ads}, SimpleCQL does not notably outperform SimpleDB 
 The projected throughput of SimpleCQL is approximately 8k tuples/second, whereas the projected throughput of SimpleDB is approximately 6.5k tuples/second.  Both systems are severely hindered by a very large unoptimized nested-loop join running at every timestep.
 
 \subsection{Garbage Collection}
+Garbage collecting tuples that are no longer needed using a time-based collection policy drastically reduced the memory footprint of the system.  This is expected as keeping tupled in memory indefinitely will continuously consume more memory.  There is a performance tradeoff to discarding old tuples, but we show that this outweighs the memory usage in Figure~\ref{fig:gc_perf}.  The impact to execution time per timestep when garbage collection is enabled is approximately 20ms, or roughly 4\%.
+
 As expected Garbage collection drastically reduced the memory footprint of the system, but reduced performance slightly. These points are better illustrated in the following graphs, which were produced using our LiveStreamReader.
 
 \begin{figure}[h!]
     \centering
     \centerline{\includegraphics[totalheight=5cm]{gc_perf.png}}
-    \caption{Plot of execution time per timestamp versus timestamp with and without garbage collection. With Garbage Collection enabled, the system performs marginally worse than with Garbage Collection disabled}
+    \caption{Plot of execution time per timestamp versus timestamp with and without garbage collection. With Garbage Collection enabled, the system performs marginally worse than with Garbage Collection disabled.}
     \label{fig:gc_perf}
 \end{figure}
 
