--- a/paper/SimpleCQL.tex
+++ b/paper/SimpleCQL.tex
@@ -249,16 +249,16 @@ For now, we have only implemented the time based garbage collection policy. Effe
 Benchmarks of SimpleCQL were performed on an AWS Compute Optimized (c3.8xlarge) instance with 60 GiB of memory, 32 vCPUs, 640 GB of SSD-based local instance storage, and a 64-bit platform.  When applicable, SimpleCQL performance was compared to that of SimpleDB and the continuous workload of SimpleCQL is shown to outperform equivalent discretized workloads of SimpleDB.  
 
 \subsection{Testing Conditions}
-SimpleDB was intended to be a toy database designed for teaching core concepts of database internals.  As such, the performance of both SimpleDB and SimpleCQL suffer from a lack of optimizations.  However, we made sure to use the same underlying operations when benchmarking both SimpleDB and SimpleCQL, as well has holding as many other factors constant to make for a fair comparison. For example, we configured SimpleDB to not have to write inserted tuples to disk because SimpleCQL operates entirely in-memory. Further, SimpleDB does not use an index because there is no indexing in SimpleCQL at all. With these precautions, we anticipate our experiments will closely isolate the performance differences between SimpleDB and SimpleCQL.
+SimpleDB was intended to be a toy database designed for teaching core concepts of database internals.  As such, the performance of both SimpleDB and SimpleCQL suffer from a lack of optimizations.  However, we made sure to use the same underlying operations when benchmarking both SimpleDB and SimpleCQL, as well as holding many other factors constant to make for a fair comparison. For example, we configured SimpleDB to not have to write inserted tuples to disk because SimpleCQL operates entirely in-memory. Further, SimpleDB does not use an index because there is no indexing in SimpleCQL at all. With these kinds of controls in place, we anticipate our experimental results will closely delineate the performance differences between SimpleDB and SimpleCQL.
 
-Many of the benchmark tests were run over $D = 1800$ timesteps and the number of tuples per timestep $R$ was increased to measure performance.  Equation~\ref{eq:throughput} is used to estimate the projected throughput of the system.
+Many of the benchmark tests were run over $D = 1800$ timesteps, and the number of tuples per timestep $R$ was used to vary the work density per timestep.  We measured the time $T$ it took to process $D$ timesteps with respect to $R$.  Equation~\ref{eq:throughput} is used to estimate the projected throughput of the system.
 
 \begin{equation} \label{eq:throughput}
     \text{Throughput} = R \text{ tuples/timestep} \times \dfrac{D \text{ timesteps}}{T \text{ seconds}}
 \end{equation}
 
 \subsection{Log Analysis: Detecting Attacks}
-Most web companies wish to keep their users accounts safe and out of reach of hackers and spammers.  On occasion though, hackers obtain lists of potentially millions of usernames.  These users can then be victims of a brute-force attack, where attackers try to brute force through all possible strings to guess a user'€™s password. This leads to a spike in the number of failed login attempts. Access to real-time error log statistics allows spam and abuse teams to easily detect such an attack and respond as necessary.
+Most web companies wish to keep their users' accounts safe and out of reach from hackers and spammers.  On occasion, though, malicious parties do manage to obtain lists of millions of usernames.  These users can then be victims of a brute-force attack where attackers try to brute force through all possible permutations to guess a user's password, resulting in a spike in the number of failed login attempts. Access to real-time error log statistics allows spam and abuse teams to easily detect such an attack and respond as necessary.
 
 In this example, we consider a stream of log messages, \texttt{LogStream}. We formally define the schema of the stream as: \texttt{LogStream\{Message:STRING\}}. Given this schema, a rolling count of log messages that contain the string ``failed login'' provides the relevant information for the above situation.  The following query computes a rolling count of failed login attempts.
 
